@@ -1,3 +1,6 @@
+2017-01-08  SilverNexus
+	* search.c: Fixed dirent-based search and optimized it a bit.
+
 2017-01-07  SilverNexus
 	* fileperuser_search.c: Refactor a redundant while-loop check to make
 	  a do-while loop. Saves a couple instructions per call of the function.
